--- a/Task1/index.html
+++ b/Task1/index.html
@@ -33,25 +33,25 @@
 
 <div class="row">
   <div class="column">
-    <img src="images/1.jpg" alt="Snow" style="width:100%">
+    <img src="images/1.jpg" alt="water" style="width:100%">
   </div>
   <div class="column">
-    <img src="images/2.jpg" alt="Forest" style="width:100%">
+    <img src="images/2.jpg" alt="car" style="width:100%">
   </div>
   <div class="column">
-    <img src="images/3.jpg" alt="Mountains" style="width:100%">
+    <img src="images/3.jpg" alt="messi" style="width:100%">
   </div>
   <div class="column">
-    <img src="images/4.jpg" alt="Mountains" style="width:100%">
+    <img src="images/4.jpg" alt="car" style="width:100%">
   </div>
    <div class="column">
-    <img src="images/5.jpg" alt="Mountains" style="width:100%">
+    <img src="images/5.jpg" alt="car" style="width:100%">
   </div>
    <div class="column">
-    <img src="images/6.jpg" alt="Mountains" style="width:100%">
+    <img src="images/6.jpg" alt="car" style="width:100%">
   </div>
    <div class="column">
-    <img src="images/7.jpg" alt="Mountains" style="width:100%">
+    <img src="images/7.jpg" alt="flower" style="width:100%">
   </div>
 </div>
 
