--- a/Task1/index.html
+++ b/Task1/index.html
@@ -11,8 +11,8 @@
   float: left;
   width: 33.33%;
   padding: 5px;
-    height: 33.33%;
 }
+
 .row{
 	width:900px;
 	align:center;
@@ -33,25 +33,25 @@
 
 <div class="row">
   <div class="column">
-    <img src="images/1.jpg" alt="water" style="width:100%">
+    <img src="images/1.jpg" alt="Snow" onclick="window.open(this.src)" style="width:100%">
   </div>
   <div class="column">
-    <img src="images/2.jpg" alt="car" style="width:100%">
+    <img src="images/2.jpg" alt="Forest" onclick="window.open(this.src)" style="width:100%">
   </div>
   <div class="column">
-    <img src="images/3.jpg" alt="messi" style="width:100%">
+    <img src="images/3.jpg" alt="Mountains"onclick="window.open(this.src)" style="width:100%">
   </div>
   <div class="column">
-    <img src="images/4.jpg" alt="car" style="width:100%">
+    <img src="images/4.jpg" alt="Mountains" onclick="window.open(this.src)" style="width:100%">
   </div>
    <div class="column">
-    <img src="images/5.jpg" alt="car" style="width:100%">
+    <img src="images/5.jpg" alt="Mountains" onclick="window.open(this.src)" style="width:100%">
   </div>
    <div class="column">
-    <img src="images/6.jpg" alt="car" style="width:100%">
+    <img src="images/6.jpg" alt="Mountains" onclick="window.open(this.src)" style="width:100%">
   </div>
    <div class="column">
-    <img src="images/7.jpg" alt="flower" style="width:100%">
+    <img src="images/7.jpg" alt="Mountains" onclick="window.open(this.src)" style="width:100%">
   </div>
 </div>
 
